fix(top-common-holdings): aggregate contributions from nested fund holdings
The metric read TOP_HOLDINGS - a security's own stored top-holdings column - so a
leaf held inside a lower-ranked ETF was dropped along with the fund wrapping it and
never reached the result. It now reads LIMITED_HOLDINGS, which Security Master
serves from the holdings table decomposed through nested funds and aggregated per
instrument.

This changes the response. Weights are summed across levels and deduplicated per
instrument, so a portfolio whose funds hold overlapping leaves returns different
allocations and numOfFunds, and a security holding the same instrument twice now
returns one summed row. Leaves carry Morningstar ids far more often than the stored
column did. Securities present only in the stored column are not served by the new
attribute and fail the request, since the calculation requires data for every
holding; coverage is a Security Master data question tracked separately.

TOP_HOLDINGS is no longer bound here at all. Nothing requests it once the metric
moves, so its binding and mapper are removed rather than left as a registry entry no
code can reach; Security Master still serves the attribute for any other consumer.
The conversion itself lives in AbstractHoldingsMapper - LimitedHoldingsMapper
supplies only its payload's allocation and currency accessors - and ticker moves last
in the identifier priority, being the least globally unique of the five.

The WebClient response buffer ceiling becomes configurable, defaulting to 32 MB.
WebFlux buffers a response whole and defaults to 256 KB, while a looked-through
payload runs to several megabytes for the heaviest securities and the composite
fetcher batches a whole portfolio into one request; exceeding the limit surfaces as
a DataBufferLimitException reported as Security Master being unavailable. Coupled to
Security Master's max-holdings-percentage-per-security - raise both together.

refs: TMI-554
(cherry picked from commit 855a1